G1 unnecessarily scans remembered set cards for regions that already have been evacuated

XMLWordPrintable

    • gc
    • b22
    • Verified

      When evacuating optional regions G1 iterates over the remembered sets of these regions. These remembered sets may contain cards in other, in previous iterations evacuated optional regions.

      Since we do not update the scan_top() filter used for filtering out such cards between iterations, such cards are not filtered out and the corresponding heap scanned.

      This is a day-one minor performance issue for AMGC, and causes crashes since implementation of JDK-8218668.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: