8222492: G1 unnecessarily scans remembered set cards for regions that already have been evacuated

Filter out cards from the current collection set during evacuation increments.

Reviewed-by: kbarrett, sangheki